--- a/index.html
+++ b/index.html
@@ -4,168 +4,175 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrapper">
-        <div class="main">
-            <div class="header">
-                <div class="header-wrap">
-                    <div class="logo"></div>
-                    <div class="menu">
-                        <li>
-                            <a href=""></a>
-                        </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
+        <div class="page">
+            <div class="main">
+                <div class="header">
+                    <div class="header-wrap">
+                        <div class="logo"></div>
+                        <div class="menu">
+                            <li>
+                                <a href="">Главная</a>
+                            </li>
+                            <li>
+                                <a href="">Отели</a>
+                            </li>
+                            <li>
+                                <a href="">Рестораны</a>
+                            </li>
+                            <li>
+                                <a href="">Туры</a>
+                            </li>
+                            <li>
+                                <a href="">Места назначения</a>
+                            </li>
+                            <li>
+                                <a href="">Развлечения</a>
+                            </li>
+                            <li>
+                                <a href="">Контакты</a>
+                            </li>
+                        </div>
+                        <div class="login">
+                            <div class="login-text">
+                                <div class="welcome">Привет,</div>
+                                <div class="name">Алес Несетриль!</div>
+                            </div>
+                            <div class="login-imgs">
+                                <div class="avatar"></div>
+                                <div class="status"></div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="login">
-                        <div class="welcome"></div>
-                        <div class="name"></div>
-                        <div class="avatar"></div>
-                        <div class="status"></div>
+                </div>
+                <div class="discover">
+                    <p></p>
+                <div class="disc-button"></div>
+                    <div class="search-bar">
+                        <div class="location"></div>
+                        <div class="activity"></div>
+                        <div class="when"></div>
+                    <div class="guests"></div>
+                    <div class="search-button"></div>
                     </div>
                 </div>
             </div>
-            <div class="discover">
-                <p></p>
-             <div class="disc-button"></div>
-                <div class="search-bar">
-                    <div class="location"></div>
-                    <div class="activity"></div>
-                    <div class="when"></div>
-                   <div class="guests"></div>
-                   <div class="search-button"></div>
+            <div class="destinations">
+                <div class="dest-upper">
+                    <h1></h1>
+                    <div class="dest-search">
+                    </div>
+                </div>
+                <div class="dest-lower">
+                    <li>
+                        <img>
+                        <h1></h1>
+                        <p></p>
+                    </li>
+                    <li>
+                        <img>
+                        <h1></h1>
+                        <p></p>
+                    </li>
+                    <li>
+                        <img>
+                        <h1></h1>
+                        <p></p>
+                    </li>
+                    <li>
+                        <img>
+                        <h1></h1>
+                        <p></p>
+                    </li>
+                    <li>
+                        <img>
+                        <h1></h1>
+                        <p></p>
+                    </li>
+                    <li>
+                        <img>
+                        <h1></h1>
+                        <p></p>
+                    </li>
                 </div>
             </div>
-        </div>
-        <div class="destinations">
-            <div class="dest-upper">
-                <h1></h1>
-                <div class="dest-search">
+            <div class="hotel-restaurants">
+                <div class="upper-part">
+                    <h1></h1>
+                    <div class="view-all"></div>
+                </div>
+                <div class="lower-part">
+                    <li>
+                        <img>
+                        <h2></h2>
+                        <img> <p></p>
+                        <div class="star-1"></div>
+                    </li>
+                    <li>
+                        <img>
+                        <h2></h2>
+                        <img> <p></p>
+                        <div class="star-2"></div>
+                    </li>
+                    <li>
+                        <img>
+                        <h2></h2>
+                        <img> <p></p>
+                        <div class="star-3"></div>
+                    </li>
+                    <li>
+                        <img>
+                        <h2></h2>
+                        <img> <p></p>
+                        <div class="star-4"></div>
+                    </li>
                 </div>
             </div>
-            <div class="dest-lower">
-                <li>
-                    <img>
+            <div class="tips-advice">
+                <div class="ta-upper">
                     <h1></h1>
-                    <p></p>
+                    <div class="view-all"></div>
+                </div>
+                <div class="ta-lower">
+                    <li>
+                        <img>
+                        <div class="story1"></div>
+                    </li>
+                    <li>
+                        <img>
+                        <div class="story2"></div>
                 </li>
-                <li>
-                    <img>
-                    <h1></h1>
-                    <p></p>
-                </li>
-                <li>
-                    <img>
-                    <h1></h1>
-                    <p></p>
-                </li>
-                <li>
-                    <img>
-                    <h1></h1>
-                    <p></p>
-                </li>
-                <li>
-                    <img>
-                    <h1></h1>
-                    <p></p>
-                </li>
-                <li>
-                    <img>
-                    <h1></h1>
-                    <p></p>
-                </li>
+                </div>
             </div>
-        </div>
-        <div class="hotel-restaurants">
-            <div class="upper-part">
+            <div class="activities">
                 <h1></h1>
                 <div class="view-all"></div>
-            </div>
-            <div class="lower-part">
                 <li>
                     <img>
-                    <h2></h2>
-                    <img> <p></p>
-                    <div class="star-1"></div>
+                    <p></p>
                 </li>
                 <li>
                     <img>
-                    <h2></h2>
-                    <img> <p></p>
-                    <div class="star-2"></div>
+                    <p></p>
                 </li>
                 <li>
                     <img>
-                    <h2></h2>
-                    <img> <p></p>
-                    <div class="star-3"></div>
+                    <p></p>
                 </li>
                 <li>
                     <img>
-                    <h2></h2>
-                    <img> <p></p>
-                    <div class="star-4"></div>
+                    <p></p>
                 </li>
             </div>
-        </div>
-        <div class="tips-advice">
-            <div class="ta-upper">
-                <h1></h1>
-                <div class="view-all"></div>
+            <div class="about-us">
+                <div class="abtus"></div>
+                <img>
             </div>
-            <div class="ta-lower">
-                <li>
-                    <img>
-                    <div class="story1"></div>
-                </li>
-                <li>
-                    <img>
-                    <div class="story2"></div>
-            </li>
+            <div class="footer"></div>
             </div>
-        </div>
-        <div class="activities">
-            <h1></h1>
-            <div class="view-all"></div>
-            <li>
-                <img>
-                <p></p>
-            </li>
-            <li>
-                <img>
-                <p></p>
-            </li>
-            <li>
-                <img>
-                <p></p>
-            </li>
-            <li>
-                <img>
-                <p></p>
-            </li>
-        </div>
-        <div class="about-us">
-            <div class="abtus"></div>
-            <img>
-        </div>
-        <div class="footer"></div>
         </div>
     </div>
 </body>
