--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                     </div>
                 </div>
                 <div class="discover">
-                    <p></p>
-                <div class="disc-button"></div>
-                    <div class="search-bar">
-                        <div class="location"></div>
-                        <div class="activity"></div>
-                        <div class="when"></div>
-                    <div class="guests"></div>
-                    <div class="search-button"></div>
-                    </div>
+                    <p>Находите самые привлекательные места.</p>
+                    <div class="disc-button"></div>
+                        <div class="search-bar">
+                            <div class="location"></div>
+                            <div class="activity"></div>
+                            <div class="when"></div>
+                        <div class="guests"></div>
+                        <div class="search-button"></div>
+                        </div>
                 </div>
             </div>
             <div class="destinations">
