--- a/index.html
+++ b/index.html
@@ -50,14 +50,42 @@
                 </div>
                 <div class="discover">
                     <p>Находите самые привлекательные места.</p>
-                    <div class="disc-button"></div>
+                    <button class="disc-button">Найдите на 3Д-модели мира</button>
                         <div class="search-bar">
-                            <div class="location"></div>
-                            <div class="activity"></div>
-                            <div class="when"></div>
-                        <div class="guests"></div>
-                        <div class="search-button"></div>
+                            <div class="sb-inside">
+                                <div class="location">
+                                    <img src="imgs/icon1.png">
+                                    <div class="loc-text">
+                                        <h1>Локация</h1>
+                                        <p>Отправляйтесь в новые места</p>
+                                    </div>
+                                </div>
+                                <div class="activity">
+                                    <img src="imgs/icon2.png">
+                                    <div class="act-text">
+                                        <h1>Развлечения</h1>
+                                        <p>Все развлечения</p>
+                                    </div>
+                                </div>
+                                <div class="when">
+                                    <img src="imgs/icon3.png">
+                                    <div class="wh-text">
+                                        <h1>Дата</h1>
+                                        <p>Выбрать дату</p>
+                                    </div>
+                                </div>
+                                <div class="guests">
+                                    <img src="imgs/icon4.png">
+                                    <div class="guest-text">
+                                        <h1>Персоны</h1>
+                                        <p>1 персона</p>
+                                    </div>
+                                </div>
+                            </div>
+                        <div class="search-button">
+                            <img src="imgs/icon5.png">
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="destinations">
