--- a/index.html
+++ b/index.html
@@ -90,40 +90,42 @@
             </div>
             <div class="destinations">
                 <div class="dest-upper">
-                    <h1></h1>
+                    <h1>Популярное места</h1>
                     <div class="dest-search">
+                        <p>Этикетка</p>
+                        <img src="imgs/icon6.png">
                     </div>
                 </div>
                 <div class="dest-lower">
                     <li>
-                        <img>
-                        <h1></h1>
-                        <p></p>
+                        <img src="imgs/img.png">
+                        <h1>Большой Сур</h1>
+                        <p>Калифорния, США</p>
                     </li>
                     <li>
-                        <img>
-                        <h1></h1>
-                        <p></p>
+                        <img src="imgs/img1.png">
+                        <h1>Прескот</h1>
+                        <p>Аризона, США</p>
                     </li>
                     <li>
-                        <img>
-                        <h1></h1>
-                        <p></p>
+                        <img src="imgs/img2.png">
+                        <h1>Форт-Майерс</h1>
+                        <p>Флорида, США</p>
                     </li>
                     <li>
-                        <img>
-                        <h1></h1>
-                        <p></p>
+                        <img src="imgs/img3.png">
+                        <h1>Тусон</h1>
+                        <p>Аризона, США</p>
                     </li>
                     <li>
-                        <img>
-                        <h1></h1>
-                        <p></p>
+                        <img src="imgs/img4.png">
+                        <h1>Санкт-Йосеф</h1>
+                        <p>Мичиган, США</p>
                     </li>
                     <li>
-                        <img>
-                        <h1></h1>
-                        <p></p>
+                        <img src="imgs/img5.png">
+                        <h1>Мадрид</h1>
+                        <p>Испания</p>
                     </li>
                 </div>
             </div>
