--- a/index.html
+++ b/index.html
@@ -131,33 +131,44 @@
             </div>
             <div class="hotel-restaurants">
                 <div class="upper-part">
-                    <h1></h1>
-                    <div class="view-all"></div>
+                    <h1>Отели и рестораны</h1>
+                    <div class="view-all">
+                        <p>Посмотреть все</p>
+                        <img src="imgs/icon7.png">
+                    </div>
                 </div>
                 <div class="lower-part">
                     <li>
-                        <img>
-                        <h2></h2>
-                        <img> <p></p>
-                        <div class="star-1"></div>
+                        <img src="imgs/img6.png">
+                        <h2>Монастеро Санта Роза Отель и Спа</h2>
+                        <img src="imgs/icon-loc.png"> <p>Салерно, Италия</p>
+                        <div class="star-1">
+
+                        </div>
                     </li>
                     <li>
-                        <img>
+                        <img src="imgs/img7.png">
                         <h2></h2>
-                        <img> <p></p>
-                        <div class="star-2"></div>
+                        <img src="imgs/icon-loc.png"> <p></p>
+                        <div class="star-2">
+
+                        </div>
                     </li>
                     <li>
-                        <img>
+                        <img src="imgs/img8.png">
                         <h2></h2>
-                        <img> <p></p>
-                        <div class="star-3"></div>
+                        <img src="imgs/icon-loc.png"> <p></p>
+                        <div class="star-3">
+
+                        </div>
                     </li>
                     <li>
-                        <img>
+                        <img src="imgs/img9.png">
                         <h2></h2>
-                        <img> <p></p>
-                        <div class="star-4"></div>
+                        <img src="imgs/icon-loc.png"> <p></p>
+                        <div class="star-4">
+
+                        </div>
                     </li>
                 </div>
             </div>
