--- a/index.html
+++ b/index.html
@@ -141,33 +141,34 @@
                     <li>
                         <img src="imgs/img6.png">
                         <h2>Монастеро Санта Роза Отель и Спа</h2>
-                        <img src="imgs/icon-loc.png"> <p>Салерно, Италия</p>
-                        <div class="star-1">
-
+                        <div class="hotel-location">
+                            <img class="icon" src="imgs/icon-loc.png">
+                            <p>Салерно, Италия</p>
+                            <img class="star" src="imgs/5star.png">
                         </div>
                     </li>
                     <li>
                         <img src="imgs/img7.png">
-                        <h2></h2>
-                        <img src="imgs/icon-loc.png"> <p></p>
-                        <div class="star-2">
-
+                        <h2>Гранд Отель Tremezzo</h2>
+                        <div class="hotel-location">
+                        <img class="icon" src="imgs/icon-loc.png"> <p>Озеро Комо, Италия</p>
+                        <img class="star" src="imgs/3star.png">
                         </div>
                     </li>
                     <li>
                         <img src="imgs/img8.png">
-                        <h2></h2>
-                        <img src="imgs/icon-loc.png"> <p></p>
-                        <div class="star-3">
-
+                        <h2>Оберой Удайвиллас, Удайпур</h2>
+                        <div class="hotel-location">
+                        <img class="icon" src="imgs/icon-loc.png"> <p>Удайпур, Индия</p>
+                        <img class="star" src="imgs/4star.png">
                         </div>
                     </li>
                     <li>
                         <img src="imgs/img9.png">
-                        <h2></h2>
-                        <img src="imgs/icon-loc.png"> <p></p>
-                        <div class="star-4">
-
+                        <h2>Беверли-Хиллс</h2>
+                        <div class="hotel-location">
+                        <img class="icon" src="imgs/icon-loc.png"> <p>Лос Анджелес, США</p>
+                        <img class="star" src="imgs/3star.png">
                         </div>
                     </li>
                 </div>
